--- a/studio/package.json
+++ b/studio/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "openseablockchainclone",
+  "name": "opensea",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Rafeh Qazi <qazi@cleverprogrammer.com>",
+  "author": "Ryoya Itabashi <eternaleight0@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
@@ -14,16 +14,18 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.25.0",
-    "@sanity/core": "^2.25.0",
-    "@sanity/default-layout": "^2.25.0",
-    "@sanity/default-login": "^2.24.1",
-    "@sanity/desk-tool": "^2.25.0",
-    "@sanity/vision": "^2.25.0",
+    "@sanity/base": "^2.27.0",
+    "@sanity/cli": "^2.27.0",
+    "@sanity/core": "^2.27.0",
+    "@sanity/default-layout": "^2.27.0",
+    "@sanity/default-login": "^2.27.0",
+    "@sanity/desk-tool": "^2.27.0",
+    "@sanity/eslint-config-studio": "^2.0.0",
+    "@sanity/vision": "^2.27.0",
+    "eslint": "^8.6.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
-    "react-icons": "^4.3.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {}
